--- a/src/app/components/form-wfo-new-normal/form-wfo-new-normal.component.html
+++ b/src/app/components/form-wfo-new-normal/form-wfo-new-normal.component.html
@@ -9,44 +9,37 @@
 
 <ion-card>
   <ion-card-header>
-    <ion-card-subtitle>Form Absen Diluar</ion-card-subtitle>
+    <ion-card-subtitle>Form WFO - New Normal</ion-card-subtitle>
   </ion-card-header>
 
   <ion-card-content>
-    <ion-item Lines="full">{{ txtTimeRequest }}</ion-item>
-
-    <ion-item>
-      <ion-input type="text" placeholder="Alasan Absen Diluar" [(ngModel)]="txtDesc" name="txtDesc" required>
-      </ion-input>
-      <ion-icon class="takepicture" (click)="TakePhotos()" name="camera" color="hk-red"></ion-icon>
+    <ion-item Lines="full">
+      {{txtTimeRequest}}
     </ion-item>
 
-    <div *ngIf="isArrived">
-      <ion-item>
-        <ion-label>Kondisi kesehatan</ion-label>
-        <ion-select mode="ios" [(ngModel)]="kesehatan">
-          <ion-select-option value="Sehat" selected>Sehat</ion-select-option>
-          <ion-select-option value="Kurang sehat">Kurang sehat</ion-select-option>
-        </ion-select>
-      </ion-item>
+    <ion-item Lines="full">
+      <ion-input type="text" placeholder="Suhu badan hari ini" [(ngModel)]="txtTemperature" name="txtTemperature"
+        required>
+      </ion-input>
+      <ion-label position="end">Celcius</ion-label>
+    </ion-item>
 
-      <ion-item Lines="full">
-        <ion-label>Adakah rencana keluar</ion-label>
-        <ion-toggle [(ngModel)]="isOutPlan" slot="end"></ion-toggle>
-      </ion-item>
+    <ion-item Lines="full">
+      <ion-label>Adakah rencana keluar</ion-label>
+      <ion-toggle [(ngModel)]="isOutPlan" slot="end"></ion-toggle>
+    </ion-item>
 
-      <ion-item Lines="full">
-        <ion-label>Bertemu pihak eksternal</ion-label>
-        <ion-toggle [(ngModel)]="isExternal" slot="end"></ion-toggle>
-      </ion-item>
+    <ion-item Lines="full">
+      <ion-label>Bertemu pihak eksternal</ion-label>
+      <ion-toggle [(ngModel)]="isExternal" slot="end"></ion-toggle>
+    </ion-item>
 
-      <ion-item Lines="full">
-        <ion-label>Ada keluarga sakit</ion-label>
-        <ion-toggle [(ngModel)]="isFamilyMemberSick" slot="end" (ionChange)="IsFamilyMemberSick()"></ion-toggle>
-      </ion-item>
-    </div>
+    <ion-item Lines="full">
+      <ion-label>Ada keluarga sakit</ion-label>
+      <ion-toggle [(ngModel)]="isFamilyMemberSick" slot="end" (ionChange)="IsFamilyMemberSick()"></ion-toggle>
+    </ion-item>
 
-    <div *ngIf="isArrived && isFamilyMemberSick">
+    <div *ngIf="isFamilyMemberSick">
       <ion-item Lines="full">
         <ion-input type="text" placeholder="Hubungan Dengan Karyawan" [(ngModel)]="txtHubungan" name="txtHubungan"
           required>
@@ -68,7 +61,7 @@
       </ion-item>
     </div>
 
-    <div *ngIf="isArrived && isFamilyMemberSick && isFamilyMemberSick2">
+    <div *ngIf="isFamilyMemberSick && isFamilyMemberSick2">
       <ion-item Lines="full">
         <ion-input type="text" placeholder="Hubungan Dengan Karyawan" [(ngModel)]="txtHubungan2" name="txtHubungan2"
           required>
@@ -90,7 +83,7 @@
       </ion-item>
     </div>
 
-    <div *ngIf="isArrived && isFamilyMemberSick && isFamilyMemberSick2 && isFamilyMemberSick3">
+    <div *ngIf="isFamilyMemberSick && isFamilyMemberSick2 && isFamilyMemberSick3">
       <ion-item Lines="full">
         <ion-input type="text" placeholder="Hubungan Dengan Karyawan" [(ngModel)]="txtHubungan3" name="txtHubungan3"
           required>
@@ -108,14 +101,11 @@
       </ion-item>
     </div>
 
-    <ion-col class="picture">
-      <img src="{{ photo }}" class="center" />
-    </ion-col>
   </ion-card-content>
 
   <ion-row class="ion-align-items-center">
     <ion-col class="signup-col">
-      <ion-button shape="round" expand="block" color='hk-blue' (click)="SaveOutsideRequest()" type="submit">Submit
+      <ion-button shape="round" expand="block" color='hk-blue' (click)="SaveWfoNewNormalRequest()" type="submit">Submit
       </ion-button>
     </ion-col>
   </ion-row>
