--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -118,3 +118,19 @@ ion-card {
   font-weight: bold;
   color: #000000;
 }
+
+.container {
+  // display: inline;
+  // width: 80%;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  // background-color: green;
+  overflow: hidden;
+  white-space: nowrap;
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  .scroll {
+    overflow: auto;
+  }
+}
