- UPDATE 1.2.5 - Add img-15.png - Add questioner (form wfo, wfh, add activity) -> Interaksi dg pasien, riwayat sakit, kendaraan ke area kerja - Add questioner (form wfo) -> lokasi kerja, pilihan WFO dan WFO - Proyek - Ubah deskripsi HK Absen -> Hutama Karya Attendance System for HK and Subsdiaries

--- a/src/app/components/form-absen-diluar/form-absen-diluar.component.html
+++ b/src/app/components/form-absen-diluar/form-absen-diluar.component.html
@@ -31,6 +31,24 @@
       </ion-item>
 
       <ion-item Lines="full">
+        <ion-label class="ion-text-wrap">
+          Berinteraksi dengan ODP/PDP/Pasien Terkonfirmasi Positif COVID-19
+          <p></p>
+          <ion-text style="font-size: 12px ;">(dalam 14 hari terakhir)</ion-text>
+        </ion-label>
+        <ion-toggle [(ngModel)]="isInteraksi" slot="end"></ion-toggle>
+      </ion-item>
+  
+      <ion-item Lines="full">
+        <ion-label class="ion-text-wrap">
+          Pernah mengalami demam / batuk / pilek / sakit tenggorokan / sesak
+          <p></p>
+          <ion-text style="font-size: 12px ;">(dalam 14 hari terakhir)</ion-text>
+        </ion-label>
+        <ion-toggle [(ngModel)]="isRiwayatSakit" slot="end"></ion-toggle>
+      </ion-item>
+  
+      <ion-item Lines="full">
         <ion-label>Adakah rencana keluar</ion-label>
         <ion-toggle [(ngModel)]="isOutPlan" slot="end"></ion-toggle>
       </ion-item>
