--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -4,7 +4,7 @@
       <ion-row>
         <div class="text" padding>
           <h2>HK ABSEN</h2>
-          <p>Hutama Karya Attendance System</p>
+          <p>Hutama Karya Attendance System <br> for HK and Subsdiaries</p>
         </div>
       </ion-row>
     </ion-slide>
@@ -15,7 +15,7 @@
           <h2>Gamification</h2>
           <p>Jadilah top 10 karyawan yang melakukan absensi paling awal dan dapatkan hadiahnya </p>
         </div>
-    </ion-row>
+      </ion-row>
     </ion-slide>
 
     <ion-slide>
@@ -24,7 +24,7 @@
           <h2>Integrated</h2>
           <p>Absen dengan device apa saja, karena sistem telah terintegrasi dengan CCTV, Kiosk dan SAP HITS kamu loh</p>
         </div>
-    </ion-row>
+      </ion-row>
     </ion-slide>
 
     <ion-slide>
@@ -32,10 +32,11 @@
         <div class="text" padding>
           <h2>Let's Start</h2>
           <p>Yuk, mulai bekerja pada waktunya!</p>
-          
+
           <ion-row class="ion-justify-content-center">
-              <ion-button  class="button" expand='full' color='hk-purple' shape='round' (click)='navigateToLoginPage()'>Continue <ion-icon name="arrow-forward"></ion-icon>
-              </ion-button>
+            <ion-button class="button" expand='full' color='hk-purple' shape='round' (click)='navigateToLoginPage()'>
+              Continue <ion-icon name="arrow-forward"></ion-icon>
+            </ion-button>
           </ion-row>
         </div>
       </ion-row>
