--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,13 +1,12 @@
 ion-content {
     height: 100%;
     .bg-img {
-    background-image: url("../../../assets/images/bg-2.png");
-    background-position: top;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    height: 50%;
-    width: 100%;
-    
+        background-image: url("../../../assets/images/bg-2.png");
+        background-position: top;
+        background-size: 100%;
+        background-repeat: no-repeat;
+        height: 50%;
+        width: 100%;
     }
 
     form {
@@ -18,4 +17,8 @@ ion-content {
         }
         // padding: 95% 0%;
     }
+}
+
+ion-button {
+    min-height: 40px;
 }
