- UPDATE 1.2.6 - Fix Tracking WFH - Pisah form wfo kantor pusat dan proyek - Tambah fitur login by SSO HK - Tambah keterangan versi aplikasi

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -99,7 +99,8 @@
           </ion-row>
         </ion-grid>
         <ion-button expand="block" color="hk-red" (click)="ButtonAbsen()">ABSEN</ion-button>
-        <ion-button expand="block" color="hk-red" (click)="StartLocalNotification()">Start Local Notif</ion-button>
+        <!-- <ion-button expand="block" color="hk-red" (click)="StartLocalNotification()">Start Local Notif</ion-button> -->
+        <!-- <ion-button expand="block" color="hk-red" (click)="CancelLocalNotification()">Cancel Local Notif</ion-button> -->
       </div>
     </ion-card>
   </ion-toolbar>
