--- a/src/app/components/form-absen-proyek/form-absen-proyek.component.html
+++ b/src/app/components/form-absen-proyek/form-absen-proyek.component.html
@@ -9,7 +9,7 @@
 
 <ion-card>
   <ion-card-header>
-    <ion-card-subtitle>Form WFO - New Normal</ion-card-subtitle>
+    <ion-card-subtitle>Form WFO - Absen Proyek</ion-card-subtitle>
   </ion-card-header>
 
   <ion-card-content>
@@ -20,8 +20,8 @@
     <ion-item Lines="full">
       <ion-label>Lokasi kerja</ion-label>
       <ion-select mode="ios" [(ngModel)]="lokasi" disabled="true">
-        <ion-select-option value="0" selected>Kantor Pusat</ion-select-option>
-        <ion-select-option value="1">Proyek</ion-select-option>
+        <ion-select-option value="0">Kantor Pusat</ion-select-option>
+        <ion-select-option value="1" selected>Proyek</ion-select-option>
       </ion-select>
     </ion-item>
 
