--- a/src/app/pages/welcome/welcome.page.scss
+++ b/src/app/pages/welcome/welcome.page.scss
@@ -1,8 +1,19 @@
+.overlay {
+  width: 100%;
+  height: 60px;
+  position: absolute;
+  z-index: 99;
+  // top: 10px;
+  bottom: 0px;
+  opacity: 0.5;
+  text-align: center;
+}
+
 ion-slides {
   --bullet-background-active: var(--ion-color-hk-red);
   --bullet-backcground: var(--ion-color-hk-yellow-tint);
 
-//   background: #3b2e85;
+  //   background: #3b2e85;
   height: 100%;
 }
 
@@ -15,31 +26,31 @@ ion-slide {
       left: 0;
       right: 0;
 
-      @media screen and (min-width:568px) {
+      @media screen and (min-width: 568px) {
         padding-top: 22%;
       }
 
-      @media screen and (min-width:640px) {
+      @media screen and (min-width: 640px) {
         padding-top: 25%;
       }
 
-      @media screen and (min-width:768px) {
+      @media screen and (min-width: 768px) {
         padding-top: 735px;
       }
 
-      @media screen and (min-width:812px) {
+      @media screen and (min-width: 812px) {
         padding-top: 24%;
       }
 
-      @media screen and (min-width:928px) {
+      @media screen and (min-width: 928px) {
         padding-top: 96%;
       }
 
-      @media screen and (min-width:1024px) {
+      @media screen and (min-width: 1024px) {
         padding-top: 55%;
       }
 
-      @media screen and (min-width:1381px) {
+      @media screen and (min-width: 1381px) {
         padding-top: 14%;
       }
     }
@@ -48,7 +59,7 @@ ion-slide {
     font-size: 32px;
     font-weight: bold;
 
-    @media screen and (min-width:1024px) {
+    @media screen and (min-width: 1024px) {
       font-size: 32px;
     }
   }
@@ -58,31 +69,31 @@ ion-slide {
   background-size: 100%;
   background-repeat: no-repeat;
 
-  @media screen and (min-width:568px) {
+  @media screen and (min-width: 568px) {
     height: 45%;
   }
 
-  @media screen and (min-width:640px) {
+  @media screen and (min-width: 640px) {
     height: 50%;
   }
 
-  @media screen and (min-width:768px) {
+  @media screen and (min-width: 768px) {
     height: 100%;
   }
 
-  @media screen and (min-width:812px) {
+  @media screen and (min-width: 812px) {
     height: 53%;
   }
 
-  @media screen and (min-width:928px) {
+  @media screen and (min-width: 928px) {
     height: 96%;
   }
 
-  @media screen and (min-width:1024px) {
+  @media screen and (min-width: 1024px) {
     height: 35%;
   }
 
-  @media screen and (min-width:1366px) {
+  @media screen and (min-width: 1366px) {
     background-size: 100%;
     height: 50%;
   }
