Fixing bug 1.2.6 by iOS testing

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -36,7 +36,7 @@
                 <ion-input [type]="passwordType" placeholder="Password" [(ngModel)]="szPassword" name="szPassword"
                   required>
                 </ion-input>
-                <ion-icon name="{{iconName}}" [color]="black" item-end (click)="togglePass()"></ion-icon>
+                <ion-icon name="{{iconName}}" item-end (click)="togglePass()"></ion-icon>
               </ion-item>
             </ion-col>
           </ion-row>
@@ -66,7 +66,7 @@
                 <ion-input [type]="passwordType" placeholder="Password" [(ngModel)]="szPassword" name="szPassword"
                   required>
                 </ion-input>
-                <ion-icon name="{{iconName}}" [color]="black" item-end (click)="togglePass()"></ion-icon>
+                <ion-icon name="{{iconName}}" item-end (click)="togglePass()"></ion-icon>
               </ion-item>
             </ion-col>
           </ion-row>
