- UDPATE 1.2.7 - QHSE udpate question = terakhir olahraga, jenis olahraga

--- a/src/app/pages/my-activity/my-activity.page.html
+++ b/src/app/pages/my-activity/my-activity.page.html
@@ -47,6 +47,8 @@
               <ion-text>Rencana Keluar</ion-text> <br>
               <ion-text>Bertemu External</ion-text> <br>
               <ion-text>Keluarga Sakit</ion-text> <br>
+              <ion-text>Terakhir Olahraga</ion-text> <br>
+              <ion-text>Jenis Olahraga</ion-text> <br>
             </div>
           </ion-col>
           <ion-col size="6" no-padding>
@@ -63,6 +65,8 @@
               <ion-text>: {{ txtRencanaKeluar }}</ion-text> <br>
               <ion-text>: {{ txtExternal }}</ion-text> <br>
               <ion-text>: {{ txtKondisiKeluarga }}</ion-text> <br>
+              <ion-text>: {{ txtWaktuOlahraga }}</ion-text> <br>
+              <ion-text>: {{ txtJenisOlahraga }}</ion-text> <br>
             </div>
           </ion-col>
         </ion-row>
