--- a/src/app/components/form-absen-diluar/form-absen-diluar.component.html
+++ b/src/app/components/form-absen-diluar/form-absen-diluar.component.html
@@ -38,7 +38,7 @@
         </ion-label>
         <ion-toggle [(ngModel)]="isInteraksi" slot="end"></ion-toggle>
       </ion-item>
-  
+
       <ion-item Lines="full">
         <ion-label class="ion-text-wrap">
           Pernah mengalami demam / batuk / pilek / sakit tenggorokan / sesak
@@ -47,7 +47,7 @@
         </ion-label>
         <ion-toggle [(ngModel)]="isRiwayatSakit" slot="end"></ion-toggle>
       </ion-item>
-  
+
       <ion-item Lines="full">
         <ion-label>Adakah rencana keluar</ion-label>
         <ion-toggle [(ngModel)]="isOutPlan" slot="end"></ion-toggle>
@@ -122,6 +122,19 @@
 
       <ion-item Lines="full">
         <ion-input type="text" placeholder="Sakit/Deskripsi" [(ngModel)]="txtSickDesc3" name="txtSickDesc3" required>
+        </ion-input>
+      </ion-item>
+    </div>
+
+    <div *ngIf="isArrived">
+      <ion-item Lines="full">
+        <ion-label>Kapan Anda Terakhir Olahraga</ion-label>
+        <ion-datetime [(ngModel)]="waktuOlahraga" displayFormat="YYYY MM DD" placeholder="Select Date"></ion-datetime>
+      </ion-item>
+
+      <ion-item Lines="full">
+        <ion-input type="text" placeholder="Jenis Olahraga yang Dilakukan" [(ngModel)]="jenisOlahraga"
+          name="txtOlahraga" required>
         </ion-input>
       </ion-item>
     </div>
