Fixing bug 1.2.7 - Dropdown pilihan jenis olahraga - Formatting waktu olahraga (yyyy-MM-dd)

--- a/src/app/components/form-absen-diluar/form-absen-diluar.component.html
+++ b/src/app/components/form-absen-diluar/form-absen-diluar.component.html
@@ -132,10 +132,20 @@
         <ion-datetime [(ngModel)]="waktuOlahraga" displayFormat="YYYY MM DD" placeholder="Select Date"></ion-datetime>
       </ion-item>
 
-      <ion-item Lines="full">
-        <ion-input type="text" placeholder="Jenis Olahraga yang Dilakukan" [(ngModel)]="jenisOlahraga"
-          name="txtOlahraga" required>
-        </ion-input>
+      <ion-item>
+        <ion-label>Jenis Olahraga yang Dilakukan</ion-label>
+        <ion-select mode="ios" [(ngModel)]="jenisOlahraga">
+          <ion-select-option value="Jogging/Jalan/Lari" selected>Jogging/Jalan/Lari</ion-select-option>
+          <ion-select-option value="Workout/Zumba/Yoga/Senam">Workout/Zumba/Yoga/Senam</ion-select-option>
+          <ion-select-option value="Bersepeda">Bersepeda</ion-select-option>
+          <ion-select-option value="Renang">Renang</ion-select-option>
+          <ion-select-option value="Badminton/Tenis Lapangan">Badminton/Tenis Lapangan</ion-select-option>
+          <ion-select-option value="Tenis Meja">Tenis Meja</ion-select-option>
+          <ion-select-option value="Basket/Voli">Basket/Voli</ion-select-option>
+          <ion-select-option value="Futsal/Sepak Bola">Futsal/Sepak Bola</ion-select-option>
+          <ion-select-option value="Golf">Golf</ion-select-option>
+          <ion-select-option value="Lain-Lain">Lain-Lain</ion-select-option>
+        </ion-select>
       </ion-item>
     </div>
 
